--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.4",
     "@types/ityped": "^1.0.3",
+    "firebase": "^11.6.1",
     "ityped": "^1.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
